objects/Cost_Note_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Calculate_Vat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>USt. berechnen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Note__c</fullName>
        <label>Kostennote</label>
        <referenceTo>Cost_Note__c</referenceTo>
        <relationshipLabel>Kostenpunkte</relationshipLabel>
        <relationshipName>Cost_Note_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gross_Price__c</fullName>
        <formula>IF( Calculate_Vat__c = true, Price__c*1.19, Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gesamt (brutto)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Price__c</fullName>
        <formula>Gross_Price__c - Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Honorar (brutto)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Kostenpunkt_ID__c</fullName>
        <label>Old Kostenpunkt ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Cost_Note__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Honorar</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reduction__c</fullName>
        <label>Kürzung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reinvoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neu fakturiert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Bezeichnung</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Price__c -  Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cost_Note_Line_Item_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Kostenpunkt</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kostenpunkte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>